// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Start] Scanning files when starting the process should display an error if one source does not have the directory accessible but the other yes 1`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[Start] Scanning files when starting the process should display an error if one source does not have the directory accessible but the other yes 2`] = `
Array [
  Object {
    "albums": Array [
      Object {
        "createdAt": 2016-01-01T00:00:00.000Z,
        "dir": "",
        "id": 1,
        "inode": "c2VydmVyZmlyc3Q=",
        "parentDir": "",
        "photos": undefined,
        "source": "first",
        "sourceLk": undefined,
        "updatedAt": 2016-01-01T00:00:00.000Z,
      },
    ],
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "./first",
    "id": 1,
    "source": "first",
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "albums": Array [
      Object {
        "createdAt": 2016-01-01T00:00:00.000Z,
        "dir": "",
        "id": 1,
        "inode": "c2VydmVyc2Vjb25k",
        "parentDir": "",
        "photos": undefined,
        "source": "second",
        "sourceLk": undefined,
        "updatedAt": 2016-01-01T00:00:00.000Z,
      },
    ],
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "./second",
    "id": 1,
    "source": "second",
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;
